# CMakeQt5

./: .gitignore  CMakeLists-mingw8.txt  CMakeLists.txt  CMakePresets-mingw8.json  CMakePresets.json  README.md  config.h.in  version.rc.in
resources/: app.rc
translations/: en_US.ts
